# dinov2attack

./: .gitignore  README.md  helpers.py  pyproject.toml
data/: README.md  dataset.py  imagenet.py  wikiart.py  wikiart_genres.txt
model/: dino.py  gen_poison.py  metrics.py  model.py  model_segmentation.py  poison.py
preprocessing/: artist_counts.csv  coco_sparse.py  word_freq.csv
