[project]
name = "vit-attack"
version = "0.1.0"
description = "github repository for attacks on vision transformers project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.2",
]
